--- a/stylesheet.css
+++ b/stylesheet.css
@@ -196,7 +196,7 @@ main {
 /* Bio Section */
 #bio {
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 	gap: 16px;
 	margin-bottom: 40px;
 	opacity: 0;
@@ -213,11 +213,15 @@ main {
 	transform: translateY(20px);
 	transition: all 0.3s;
 	height: fit-content;
+	position: relative;
+	margin-bottom: 4px;
 }
 
 .bio-item:hover {
 	background: var(--item-background-2);
-	transform: translateY(-2px);
+	transform: translateY(-10px);
+	margin-top: 4px;
+	margin-bottom: 0px;
 	border-color: var(--accent);
 }
 
@@ -284,7 +288,7 @@ main {
 .portfolio-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-	gap: 24px;
+	gap: 20px;
 }
 
 .item {
@@ -296,11 +300,13 @@ main {
 	opacity: 0;
 	transform: translateY(20px);
 	transition: all 0.3s;
+	margin-bottom: 4px;
 }
 
 .item:hover {
 	background: var(--item-background-2);
-	transform: translateY(-4px);
+	margin-top: 4px;
+	margin-bottom: 0px;
 	border-color: var(--accent);
 }
 
@@ -331,6 +337,10 @@ main {
 	#bio {
 		grid-template-columns: repeat(3, 1fr);
 		gap: 14px;
+	}
+	.bio-item {
+		height: 100%;
+		padding: 16px;
 	}
 }
 
@@ -391,9 +401,8 @@ main {
 		gap: 12px;
 		margin-bottom: 30px;
 	}
-	
 	.bio-item {
-		padding: 16px;
+		padding: 12px;
 	}
 	
 	.portfolio {
@@ -414,12 +423,19 @@ main {
 	
 	.portfolio-grid {
 		grid-template-columns: 1fr;
-		gap: 16px;
+		gap: 10px;
 	}
 	
 	.item {
-		padding: 20px;
+		padding: 10px;
 	}
+}
+
+@media (max-width: 600px) {
+	#bio{
+		grid-template-columns: 1fr;
+	}
+	 
 }
 
 @media (max-width: 480px) {
