--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@
 	--tab-active: #c7c7c7;
 	--title: #b0b0b0;
 	--accent: #6366f1;
+	--accent-light: #4798db;
 	--border: #2a2a2a;
 }
 
@@ -300,20 +301,16 @@ main {
 .projects-cta {
 	background: var(--accent);
 	border-radius: 6px;
-
 	display: inline-block;
 	padding: 14px 26px;
 	border: 0px;
-
 	color: var(--text);
-
 	font-weight: 500;
 	font-size: 16px;
 	cursor: pointer;
 	transition: all 0.3s;
 	font-family: inherit;
 }
-
 
 .projects-cta:hover {
 	background: var(--item);
@@ -384,7 +381,7 @@ main {
 /* Bio Section */
 #bio {
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+	grid-template-columns: repeat(2, 1fr);
 	gap: 16px;
 	margin-bottom: 40px;
 	opacity: 0;
@@ -400,7 +397,6 @@ main {
 	opacity: 0;
 	transform: translateY(20px);
 	transition: all 0.3s;
-	height: fit-content;
 	position: relative;
 	margin-bottom: 4px;
 }
@@ -414,22 +410,23 @@ main {
 }
 
 .bio-item h3 {
-	font-size: 16px;
+	font-size: 20px;
 	font-weight: 600;
 	margin: 0 0 10px;
 	color: var(--title);
 }
 
+
 .bio-item p {
 	margin: 0 0 12px;
-	font-size: 13px;
+	font-size: 15px;
 	color: var(--text);
 }
 
 .bio-item ul {
 	margin: 0;
 	padding-left: 16px;
-	font-size: 13px;
+	font-size: 15px;
 	line-height: 1.4;
 }
 
@@ -650,7 +647,7 @@ main {
 /* Mobile Responsiveness */
 @media (max-width: 1024px) {
 	#bio {
-		grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: repeat(2, 1fr);
 		gap: 14px;
 	}
 	.bio-item {
@@ -712,6 +709,8 @@ main {
 	.hero-actions {
 		justify-content: center;
 		gap: 12px;
+		flex-direction: column;
+		align-items: center;
 	}
 	
 	.featured-content-wrapper {
@@ -734,8 +733,10 @@ main {
 	.contact-cta,
 	.contact-dropdown,
 	.projects-cta {
-		padding: 10px 20px;
+		padding: 12px 24px;
 		font-size: 14px;
+		width: 100%;
+		max-width: 250px;
 	}
 	
 	.dropdown-item {
@@ -854,7 +855,8 @@ main {
 	
 	.hero-actions {
 		flex-direction: column;
-		gap: 10px;
+		gap: 12px;
+		align-items: center;
 	}
 	
 	.contact-cta,
