--- a/blog/blog.css
+++ b/blog/blog.css
@@ -199,7 +199,7 @@
 
 .post-content a {
     color: var(--accent-light);
-    text-decoration: none;
+    text-decoration: underline;
     border-bottom: 1px solid transparent;
     transition: all 0.3s;
 }
