--- a/blog/blog.css
+++ b/blog/blog.css
@@ -77,7 +77,7 @@
     color: var(--title);
 }
 
-.post-date {
+.post-information {
     background: var(--item);
     padding: 6px 12px;
     border-radius: 6px;
@@ -86,18 +86,6 @@
     font-size: 13px;
     color: var(--title);
     display: inline;
-}
-
-.post-author {
-    background: var(--item);
-    padding: 6px 12px;
-    border-radius: 6px;
-    border: 1px solid var(--border);
-    margin: 0;
-    font-size: 13px;
-    color: var(--title);
-    display: inline;
-
 }
 
 .blog-post h3 {
@@ -174,9 +162,14 @@
 
 
 .post-content {
-    line-height: 1.8;
+    line-height: 1.6;
     font-size: 20px;
     color: var(--text);
+    padding-right: 20px;
+    padding-left: 20px;
+    max-width: 80vw;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .post-content p {
@@ -301,6 +294,9 @@
 }
 
 @media (max-width: 768px) {
+    .post-information {
+        padding: 3px 6px;
+    }
     .blog-header {
         padding: 40px 16px 20px;
     }
@@ -353,6 +349,10 @@
     
     .post-content {
         font-size: 15px;
+        line-height: 1.6;
+        padding-right: 5px;
+        padding-left: 5px;
+        max-width: 100vw;
     }
     
     .post-content h2 {
