--- a/blog/blog.css
+++ b/blog/blog.css
@@ -150,6 +150,11 @@
     line-height: 1.2;
 }
 
+.post-disclaimer {
+    font-style: italic;
+    font-size: 16px;
+}
+
 .post-meta {
     display: flex;
     justify-content: center;
