--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=SUSE:wght@400');
+
+
 .blog-header {
     text-align: center;
     padding: 60px 0 40px;
@@ -167,7 +170,7 @@
 
 
 .post-content {
-    line-height: 1.6;
+    line-height: 1.7;
     font-size: 20px;
     color: var(--text);
     padding-right: 20px;
@@ -175,6 +178,7 @@
     max-width: 80vw;
     margin-left: auto;
     margin-right: auto;
+    font-family: 'SUSE';
 }
 
 .post-content p {
@@ -214,6 +218,7 @@
     border-radius: 8px;
     font-style: italic;
     color: var(--title);
+    font-family: 'Inconsolata', monospace;
 }
 
 .post-content code {
@@ -221,8 +226,8 @@
     border: 1px solid var(--border);
     padding: 2px 8px;
     border-radius: 4px;
-    font-family: 'Monaco', 'Menlo', monospace;
-    font-size: 14px;
+    font-family: 'Inconsolata', 'Menlo', monospace;
+    font-size: 16px;
 }
 
 .post-content ul, .post-content ol {
